[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/door/door_sheet.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Door/DoorOut.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ui/panel/PanelStone.png" type="Texture" id=3]
[ext_resource path="res://assets/art/ui/panel/PanelMarbleFlat.png" type="Texture" id=4]
[ext_resource path="res://assets/theme/stats.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 22 )

[sub_resource type="Animation" id=2]
resource_name = "Close"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Open"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 3, 1 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[node name="DoorOut" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -22 )
scale = Vector2( 0.25, 0.253 )
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -22 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 2 )
anims/Open = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="ButtonLabel" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -71.0
margin_right = 32.0
margin_bottom = -48.0
texture = ExtResource( 3 )
patch_margin_left = 32
patch_margin_top = 8
patch_margin_right = 32
patch_margin_bottom = 8

[node name="ButtonInsideLabel" type="NinePatchRect" parent="ButtonLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
texture = ExtResource( 4 )
patch_margin_left = 16
patch_margin_right = 16

[node name="Label" type="Label" parent="ButtonLabel/ButtonInsideLabel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Down"
align = 1
valign = 1

[connection signal="body_entered" from="." to="." method="_on_DoorOut_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_DoorOut_body_exited"]
[connection signal="input_event" from="." to="." method="_on_DoorOut_input_event"]
